# PyMusicBrowser

./: .gitignore  README.md  main.py  pyproject.toml
src/: __main__.py  gui.py  player.py  prototype.py  utils.py
src/database/: __init__.py  album.py  artist.py  base_model.py  genre.py  setting.py  song.py  utils.py
src/gui/: __init__.py  browser.py  controls.py  directory_picker.py  icons.py  main_window.py  navigation.py  old.py  playlist.py  song_info.py  utils.py  wip.py
src/player/: __init__.py  playlist.py
