[project]
name = "pymusicbrowser"
version = "0.1.0"
description = "Python Music Browser - A music browser/player"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mutagen>=1.47.0",
    "peewee>=3.18.1",
    "pillow>=11.3.0",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyside6>=6.9.1",
]

[dependency-groups]
dev = [
    "pyside6-utils>=1.2.2",
]
